--- a/frontend/styles/question-page.css
+++ b/frontend/styles/question-page.css
@@ -1,6 +1,9 @@
 .window-q {
     margin-top: 10px;
 }
+.main-bar {
+    width: 400px;
+}
 .info-string  {
     color: #848D95;
     font-size: smaller;
@@ -18,18 +21,18 @@
     border: 1px solid #cfd0d2;
     height: 200px;
 }
-.head-main-colon {
+.head-main-column {
     width: 400px;
     max-height: 300px;
 }
-.main-colon {
+.main-column {
     width: 500px;
     min-height: 500px;
 }
-.vote-colon {
+.vote-column {
     width: 50px;
 }
-.blog-colon {
+.blog-column {
     border-left: 1px solid #cfd0d2;
     width: 250px;
     min-height: 500px;
